--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-lazyload": "^3.0.0",
-    "react-redux": "^5.1.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "sass": "^1.36.0",
     "style-loader": "^0.23.1",
     "styled-components": "^4.4.1",
     "svg-inline-loader": "^0.8.0",
