--- a/package.json
+++ b/package.json
@@ -29,10 +29,8 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-polyfill": "^6.26.0",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.0",
     "dotenv": "^7.0.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "file-loader": "^5.0.2",
     "history": "^4.10.1",
     "html-webpack-plugin": "^3.2.0",
     "minireset.css": "0.0.4",
@@ -41,10 +39,11 @@
     "react-lazyload": "^3.0.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.1.2",
+    "react-slick": "^0.28.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "sass": "^1.36.0",
-    "style-loader": "^0.23.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^4.4.1",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.41.4",
@@ -52,6 +51,10 @@
     "webpack-dev-server": "^3.10.1"
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "css-loader": "^3.6.0",
+    "eslint": "^6.8.0",
+    "file-loader": "^5.1.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^4.1.1"
   }
 }
